# BerlinMeister

./: .gitignore  README.md  pyproject.toml
berlin_apartment_finder/: main.py
src/: exa_apartment.py  main.py  notification.py
src/scrapers/: immoscout24.py
